--- a/css/index.css
+++ b/css/index.css
@@ -1,57 +1,84 @@
 *{
     margin: 0;
-    padding: 0;
+   padding: 0;
 
 }
 
 /* add font-family */
 
-    .merriweather-light {
+    .merriweather {
         font-family: "Merriweather", serif;
-        font-weight: 300;
+        font-weight: 600;
         font-style: normal;
       }
-      
-      .merriweather-regular {
-        font-family: "Merriweather", serif;
-        font-weight: 400;
-        font-style: normal;
-      }
-      
-      .merriweather-bold {
-        font-family: "Merriweather", serif;
-        font-weight: 700;
-        font-style: normal;
-      }
-      
-      .merriweather-black {
-        font-family: "Merriweather", serif;
-        font-weight: 900;
-        font-style: normal;
-      }
-      
-      .merriweather-light-italic {
-        font-family: "Merriweather", serif;
-        font-weight: 300;
-        font-style: italic;
-      }
-      
-      .merriweather-regular-italic {
-        font-family: "Merriweather", serif;
-        font-weight: 400;
-        font-style: italic;
-      }
-      
-      .merriweather-bold-italic {
-        font-family: "Merriweather", serif;
-        font-weight: 700;
-        font-style: italic;
-      }
-      
-      .merriweather-black-italic {
-        font-family: "Merriweather", serif;
-        font-weight: 900;
-        font-style: italic;
+
+      body {
+        font-family: "Inter", serif;
       }
       
       /* header style */
+
+      header {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../image/Banner\ Image.png);
+        width: 100%;
+        height: 600px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+       
+      }
+
+      .banner{
+        height: 100vh;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+      }
+
+      .welcome {
+        font-size: 32px;
+        text-align: center;
+      }
+      .party {
+        text-align: center;
+        font-size: 72px;
+        font-weight: 700;
+      }
+
+     /* discount section style */
+
+     .discount-container {
+      padding-left: 200px;
+      padding-right: 200px;
+      margin-top: 100px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+     }
+
+     .discount{
+      font-size: 88px;
+      font-weight: 700;
+      color: #FF0000;
+     }
+
+     .discount-des{
+      font-size: 24px;
+      color: #FF0000;
+      margin-top: 48px;
+     }
+
+     .dis-content {
+      font-size: 48px;
+      color: #070211;
+      font-weight: 500;
+     }
+
+     .dis-pic{
+      margin-top: 20px;
+     }
+
+     
