--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,10 @@
       }
 
       body {
-        font-family: "Inter", serif;
+          font-family: "Inter", serif;
+          font-optical-sizing: auto;
+          font-weight: weight;
+          font-style: normal;
       }
       
       /* header style */
@@ -21,7 +24,7 @@
       header {
         background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../image/Banner\ Image.png);
         width: 100%;
-        height: 600px;
+        height: 100vh;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -79,6 +82,42 @@
 
      .dis-pic{
       margin-top: 20px;
+     }
+
+     /* party section style */
+
+     .party-section {
+      background-image: linear-gradient(to right,rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url(../image/Vectorrr.png);
+      height: 100vh;
+      margin-top: 100px;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+     }
+
+     .party-container{
+      height: 100vh;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        margin-left: 100px;
+        row-gap: 30px;
+     }
+
+     .party-heading {
+      font-size: 64px;
+      font-weight: 700;
+     }
+
+     .party-des{
+      font-size: 18px;
+     }
+
+     .party-btn {
+      font-size: 20px;
+      font-weight: 600;
      }
 
      
