--- a/css/index.css
+++ b/css/index.css
@@ -96,6 +96,17 @@
      }
 
      .party-container{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+     }
+
+     .new-year-logo{
+      margin-right: 100px;
+      height: 450px;
+     }
+
+     .party-content{
       height: 100vh;
         color: white;
         display: flex;
@@ -118,6 +129,44 @@
      .party-btn {
       font-size: 20px;
       font-weight: 600;
+     }
+
+     /* address related style */
+
+     .address {
+      height: 480px;
+      margin-top: 100px;
+      background-image: linear-gradient(rgb(251, 214, 214),white);
+      margin-left: 100px;
+      margin-right: 100px;
+      border-radius: 15px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+     }
+
+     .add-details {
+      font-size: 32px;
+      font-weight: 600;
+     }
+
+     .add-colour {
+      color: #FF0000;
+     }
+
+     .add-btn {
+      margin-top: 25px;
+      height: 45px;
+      width: 160px;
+      background-color: #FF0000;
+      font-size: 20px;
+      font-weight: 700;
+      text-align: center;
+      padding-top: 20px;
+      border-radius: 10px;
+      color: white;
      }
 
      
