--- a/index.css
+++ b/index.css
@@ -391,6 +391,48 @@
 
      /* footer style */
 
+     .footer {
+      display: flex;
+      flex-direction: column;
+      margin-top: 100px;
+      padding-top: 100px;
+      padding-bottom: 100px;
+      color: white;
+      background-color: #070211;
+      padding-left: 100px;
+      padding-right: 100px;
+      height: 400px;
+      justify-content: space-between;
+     }
+
+     .footer-c1 {
+      display: flex;
+      justify-content: space-between;
+     }
+
+     .mobile {
+      display: flex;
+      gap: 10px;
+     }
+
+     .mobile-logo {
+      height: 24px;
+     }
+
+     .footer-c {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+     }
+
+     .f-logo {
+      height: 64px;
+     }
+
+     .rights {
+      font-size: 24px;
+     }
+
 
      
 
