--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body {
       /* header style */
 
       header {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../image/Banner\ Image.png);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./image/Banner-Image.png);
         width: 100%;
         height: 100vh;
         background-size: cover;
@@ -308,6 +308,46 @@ body {
   .Rectangle-2 {
     width: 100%;
   }
+
+  /* new holiday */
+
+  .c {
+    margin-top: 100px;
+  }
+  .m {
+    display: flex;
+    z-index: 2;
+  }
+
+  .m-co {
+    position: relative;
+    height: 500px;
+  }
+
+  .gift {
+    z-index: 1;
+  }
+
+  .all-img {
+    position: relative;
+  }
+
+  .discount {
+    position: absolute;
+    top: 10%;
+      left: -40%;
+
+  }
+
+  .red-bac {
+    position: absolute;
+    bottom: -150px;
+  }
+
+  .red {
+    width: 100%;
+  }
+
 
      
      /* portfolio section */
